services | fixed alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -684,7 +684,7 @@ a:focus {
   text-align: center;
   background-color: $primary2;
   color: $white;
-  padding: 95px 0 15px 0;
+  padding: 45px 0 15px 0;
   align-items: center;
   margin: auto;
 
